--- a/src/donate.html
+++ b/src/donate.html
@@ -18,7 +18,7 @@
                 <h1>捐赠图书</h1>
                 <div>
                     <div class="subNav"><a href="#">捐赠管理办法</a> </div>
-                    <div class="subNav"><a href="#">捐赠专题报道/自习/研修</a></div>
+                    <div class="subNav"><a href="#">捐赠专题报道</a></div>
                     <div class="subNav"><a href="#">捐赠目录查询</a> </div>
                     <div class="subNav"> <a href="#">学生爱心捐赠</a></div>
                 </div>
