--- a/src/donateTime.html
+++ b/src/donateTime.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>帮助中心</title>
     <link rel="stylesheet" href="plugin/css/reset.css">
-    <link rel="stylesheet" href="styles/donate.css">
+    <link rel="stylesheet" href="styles/donateTime.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <h1>捐赠图书</h1>
                 <div>
                     <div class="subNav"><a href="#">捐赠管理办法</a> </div>
-                    <div class="subNav"><a href="#">捐赠专题报道/自习/研修</a></div>
+                    <div class="subNav"><a href="#">捐赠专题报道</a></div>
                     <div class="subNav"><a href="#">捐赠目录查询</a> </div>
                     <div class="subNav"> <a href="#">学生爱心捐赠</a></div>
                 </div>
@@ -29,45 +29,12 @@
             <h1>捐赠专题报告</h1>
             <div class="content">
                 <ul>
-                    <li>
-                        <h2>欢迎捐赠</h2>
-                        <div class="artice">
-                            <p class="content_artice">
-                                武汉大学图书馆自成立以来，一直深受广大友好人士的关心和支持，许多知名机构、著名学者，以及广大校友、普通读者都热心地向我馆赠送各类作品。我馆对这些捐赠文献悉心收藏与整理，除了纳入普通书刊借阅体系外，还特设武汉大学文库、港台书库等进行专项收藏和管理。这些捐赠文献极大地丰富了我馆馆藏，在此我们向赠予者致以深深的谢意，同时也欢迎更多的友好人士向我馆赠送优秀作品。
-                            </p>
-                            <p class="address">
+                    <li> 2019年7月9日，河南省地方史志办公室向武汉大学捐赠《河南历代方志集成》1套19卷565册（另附总目1册）。该集成是由河南省委省政府批准、河南省地方史志办公室主持实施的大型文化项目，是新中国成立以来河南省最大的旧志出版工程。集成以现行河南行政区划为边界，汇编了现存上启明永乐十一年下至新中国成立五百余年间河南历代综合性方志共586种，内容涵盖这一时期河南自然、社会、人文、经济的发展变迁，是迄今为止研究河南最真实、权威的文献史料。其中尤为珍贵的是，河南省档案馆提供的民国《河南通志稿》13万页的珍贵档案史料，属首次影印公开，内容不仅包含舆地志、经政志、矿产志等20余种分志，还兼及河南各县采访稿、各县概况调查、各县古迹资料等，堪称研究近代河南政治、经济、文化、历史的百科全书。集成将入藏武汉大学图书馆地方文献阅览室，供全校师生阅读及研究使用。</li>
+                    <li>2019年5月23日，覃维副馆长代表西藏大学图书馆向我馆捐赠《菩日文献精选本》1套2册。西藏大学图书馆是我馆合作共建单位，两馆业务交流由来已久。“菩日文献”是2002年出土于西藏聂拉木县的一批藏文古籍文献，形成于公元八世纪至十四世纪之间。该文献记载了贡唐时期菩日地区的自然景观和民风民俗，再现了贡唐时期的历史文化风貌，是继“敦煌文献”后，在中国境内发现的年代最久远、藏量最多的藏文古籍文献。文献的发掘与影印本的出版填补了贡唐地区古籍文献的空白,为研究西藏文化的起源、变化、发展提供了极其珍贵的第一手资料和原始的文献佐证。</li>
+                    <li>2019年5月4日，纪念唐明邦先生逝世一周年的“《唐明邦学术思想探索》首发式暨捐书仪式与唐明邦学术思想研讨会”在图书馆报告厅举行。会上，唐明邦先生的弟子、义女唐梦华（王继红）女士向图书馆捐赠图书《易学源流举要》和《唐明邦学术思想探索》 2种15册。《易学源流举要》以唐先生1988年至1996年期间给中国哲学博士研究生讲课的讲稿为基础编撰而成。《唐明邦学术思想探索》是唐先生的学友、弟子研究其学术思想、回忆其精彩人生的文章结集。唐明邦（1925年1月23日-2018年5月4日），中国著名哲学家、中国哲学史专家、易学家、武汉大学中国哲学学科奠基人之一、武汉大学哲学学院教授、国学院顾问。</li>
+                    <li> 2019年4月12日，我校已故人文社科资深教授曾令良的夫人钟晓红女士向图书馆捐赠曾令良遗留的一些教学科研资料、读书笔记等，多为国际法方面内容，共54件，其中手稿30件。曾令良（1956.3 - 2016.7.8）， 法学家，生前曾任武汉大学人文社会科学资深教授、教育部长江学者特聘教授、让-莫内欧洲联盟法讲席教授（Jean Monnet Chair of European Union Law），武汉大学国际法研究所（国家高端智库）执行理事长，《武汉大学学报》（哲学社会科学版）主编。</li>
+                    <li>2019年3月，图书馆收到校宣传部赠书《乐山的回望——武汉大学西迁乐山八十周年纪念文集》，共计87册。该书是由校党委书记韩进主编，以纪念武汉大学西迁乐山八十周年，旨在传承和弘扬“教育报国、不畏牺牲；自强不息、艰苦奋斗；兼容并包、严谨求实；造福乡邦、服务社会”的“乐山精神”。该书在体例上分为西迁序曲、嘉州执教、乐山负笈、三江梦影、大佛那边五个部分，所收录的文章大多是由当时身处乐山的人记录的自己周边发生的事情，属于叙事性散文，回忆为主，文风朴实，却有着直抵人心的力量。</li>
 
-                                联系人：任晓燕 <br> 联系邮箱： xyren@lib.whu.edu.cn<br> 联系电话： 027-68753885 <br> 通信地址： 中国湖北省武汉市武昌区珞珈山武汉大学图书馆采访部文献赠送交换处（图书馆总馆D栋102）<br> 邮 编：430072<br>
-
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h2>欢迎捐赠</h2>
-                        <div class="artice">
-                            <p class="content_artice">
-                                武汉大学图书馆自成立以来，一直深受广大友好人士的关心和支持，许多知名机构、著名学者，以及广大校友、普通读者都热心地向我馆赠送各类作品。我馆对这些捐赠文献悉心收藏与整理，除了纳入普通书刊借阅体系外，还特设武汉大学文库、港台书库等进行专项收藏和管理。这些捐赠文献极大地丰富了我馆馆藏，在此我们向赠予者致以深深的谢意，同时也欢迎更多的友好人士向我馆赠送优秀作品。
-                            </p>
-                            <p class="address">
-
-                                联系人：任晓燕 <br> 联系邮箱： xyren@lib.whu.edu.cn<br> 联系电话： 027-68753885 <br> 通信地址： 中国湖北省武汉市武昌区珞珈山武汉大学图书馆采访部文献赠送交换处（图书馆总馆D栋102）<br> 邮 编：430072<br>
-
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <h2>欢迎捐赠</h2>
-                        <div class="artice">
-                            <p class="content_artice">
-                                武汉大学图书馆自成立以来，一直深受广大友好人士的关心和支持，许多知名机构、著名学者，以及广大校友、普通读者都热心地向我馆赠送各类作品。我馆对这些捐赠文献悉心收藏与整理，除了纳入普通书刊借阅体系外，还特设武汉大学文库、港台书库等进行专项收藏和管理。这些捐赠文献极大地丰富了我馆馆藏，在此我们向赠予者致以深深的谢意，同时也欢迎更多的友好人士向我馆赠送优秀作品。
-                            </p>
-                            <p class="address">
-
-                                联系人：任晓燕 <br> 联系邮箱： xyren@lib.whu.edu.cn<br> 联系电话： 027-68753885 <br> 通信地址： 中国湖北省武汉市武昌区珞珈山武汉大学图书馆采访部文献赠送交换处（图书馆总馆D栋102）<br> 邮 编：430072<br>
-
-                            </p>
-                        </div>
-                    </li>
                 </ul>
 
             </div>
