--- a/src/helpDetail.html
+++ b/src/helpDetail.html
@@ -17,69 +17,69 @@
                 <a href="Index.html"><img src="images/logo.png" alt=""></a>
                 <h1>帮助手册</h1>
                 <div>
-                    <div class="subNav ">新手上路</div>
+                    <div class="subNav" data-fid='0'>新手上路</div>
                     <ul class="navContent ">
-                        <li><a href="#">新生入门PPT（配音版）</a></li>
-                        <li><a href="#">使用电子资源</a></li>
-                        <li><a href="#">借阅权限</a></li>
+                        <li><a href="#" data-sid="0">新生入门PPT（配音版）</a></li>
+                        <li><a href="#" data-sid="1">使用电子资源</a></li>
+                        <li><a href="#" data-sid="2">借阅权限</a></li>
                     </ul>
-                    <div class="subNav">上网/自习/研修</div>
+                    <div class="subNav" data-fid='1'>上网/自习/研修</div>
                     <ul class="navContent">
-                        <li><a href="#">图书馆上网</a></li>
-                        <li><a href="#">自习场所</a></li>
-                        <li><a href="#">研修室预约</a></li>
+                        <li><a href="#" data-sid="0">图书馆上网</a></li>
+                        <li><a href="#" data-sid="1">自习场所</a></li>
+                        <li><a href="#" data-sid="2">研修室预约</a></li>
                     </ul>
-                    <div class="subNav"> 失物招领</div>
+                    <div class="subNav" data-fid='2'> 失物招领</div>
                     <ul class="navContent">
-                        <li><a href="#">失物招领</a></li>
-                        <li><a href="#">寻物启事</a></li>
-                        <li><a href="#">使用说明</a></li>
-                        <li><a href="#">管理员登陆</a></li>
+                        <li><a href="#" data-sid="0">失物招领</a></li>
+                        <li><a href="#" data-sid="1">寻物启事</a></li>
+                        <li><a href="#" data-sid="2">使用说明</a></li>
+                        <li><a href="#" data-sid="3">管理员登陆</a></li>
                     </ul>
-                    <div class="subNav"> 校外访问</div>
+                    <div class="subNav" data-fid='3'> 校外访问</div>
                     <ul class="navContent">
-                        <li><a href="#">访问须知</a></li>
-                        <li><a href="#">访问方式</a></li>
-                        <li><a href="#">上网方式的确认</a></li>
-                        <li><a href="#">浏览器代理设置</a></li>
-                        <li><a href="#">定制版浏览器下载</a></li>
-                        <li><a href="#">校外访问注意事项</a></li>
-                        <li><a href="#">校外访问FAQ</a></li>
+                        <li><a href="#" data-sid="0">访问须知</a></li>
+                        <li><a href="#" data-sid="1">访问方式</a></li>
+                        <li><a href="#" data-sid="2">上网方式的确认</a></li>
+                        <li><a href="#" data-sid="3">浏览器代理设置</a></li>
+                        <li><a href="#" data-sid="4">定制版浏览器下载</a></li>
+                        <li><a href="#" data-sid="5">校外访问注意事项</a></li>
+                        <li><a href="#" data-sid="6">校外访问FAQ</a></li>
                     </ul>
-                    <div class="subNav"> 移动图书馆</div>
-                    <ul class="navContent">
-
-                    </ul>
-                    <div class="subNav"> 自助服务</div>
-                    <ul class="navContent">
-                        <li><a href="#">自助借书</a></li>
-                        <li><a href="#">自助还书</a></li>
-                        <li><a href="#">自助文印</a></li>
-                        <li><a href="#">座位预约</a></li>
-                        <li><a href="#">自助存包</a></li>
-                        <li><a href="#">自助刷卡选号上机</a></li>
-                        <li><a href="#">电子图书借阅机</a></li>
-                        <li><a href="#">高拍仪</a></li>
-                        <li><a href="#">其它自助设备</a></li>
-                    </ul>
-                    <div class="subNav"> 学习中心</div>
+                    <div class="subNav" data-fid="4"> 移动图书馆</div>
                     <ul class="navContent">
 
                     </ul>
-                    <div class="subNav"> 工具与软件</div>
+                    <div class="subNav" data-fid='5'> 自助服务</div>
                     <ul class="navContent">
-                        <li><a href="#">数据库校外访问浏览器定制版</a></li>
-                        <li><a href="#">自助服务软件</a></li>
-                        <li><a href="#">电子阅读软件</a></li>
-                        <li><a href="#">数据库客户端安装软件</a></li>
-                        <li><a href="#">个人参考文献管理工具</a></li>
-                        <li><a href="#">统计软件</a></li>
+                        <li><a href="#" data-sid="0">自助借书</a></li>
+                        <li><a href="#" data-sid="1">自助还书</a></li>
+                        <li><a href="#" data-sid="2">自助文印</a></li>
+                        <li><a href="#" data-sid="3">座位预约</a></li>
+                        <li><a href="#" data-sid="4">自助存包</a></li>
+                        <li><a href="#" data-sid="5">自助刷卡选号上机</a></li>
+                        <li><a href="#" data-sid="6">电子图书借阅机</a></li>
+                        <li><a href="#" data-sid="7">高拍仪</a></li>
+                        <li><a href="#" data-sid="8">其它自助设备</a></li>
                     </ul>
-                    <div class="subNav"> 图书分类查询</div>
+                    <div class="subNav" data-fid='6'> 学习中心</div>
                     <ul class="navContent">
 
                     </ul>
-                    <div class="subNav"> 常见问题解答（FAQ）</div>
+                    <div class="subNav" data-fid='7'> 工具与软件</div>
+                    <ul class="navContent">
+                        <li><a href="#" data-sid="0">数据库校外访问浏览器定制版</a></li>
+                        <li><a href="#" data-sid="1">自助服务软件</a></li>
+                        <li><a href="#" data-sid="2">电子阅读软件</a></li>
+                        <li><a href="#" data-sid="3">数据库客户端安装软件</a></li>
+                        <li><a href="#" data-sid="4">个人参考文献管理工具</a></li>
+                        <li><a href="#" data-sid="5">统计软件</a></li>
+                    </ul>
+                    <div class="subNav" data-fid='8'> 图书分类查询</div>
+                    <ul class="navContent">
+
+                    </ul>
+                    <div class="subNav" data-fid='9'> 常见问题解答（FAQ）</div>
                     <ul class="navContent">
 
                     </ul>
@@ -94,25 +94,57 @@
 
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/common.js"></script>
     <script>
         $(function() {
+            var fid, sid;
+            var navList = $('.navContent')
+            var subList = $('.subNav')
+                //跳转到详情页面获取参数高亮显示
+            fid = GetQueryString('fid')
+            sid = GetQueryString("sid")
+            for (var i = 0; i < subList.length; i++) {
+                if ($(subList[i]).attr('data-fid') == fid) {
+                    //如果当前选项没有子菜单则高亮显示一级菜单
+                    if ($(subList[i]).next('.navContent').children().length == 0) {
+                        $(subList[i]).addClass('currentDd')
+                    } else {
+                        $(subList[i]).addClass('currentDt currentDd').next(".navContent").slideToggle(300).siblings(".navContent").slideUp(500)
+                        var liList = $(subList[i]).next(".navContent").children('li')
+                        for (var j = 0; j < liList.length; j++) {
+                            if ($(liList[j]).children('a').attr("data-sid") == sid) {
+                                $(liList[j]).addClass('currentDd')
+                            }
+                        }
+                    }
+                }
+            }
             //侧边栏运行
             // 重置侧边栏禁止点击状态
-            var navList = $('.navContent')
             for (var i = 0; i < navList.length; i++) {
                 if (navList.eq(i).children().length == 0) {
                     $(".subNav").eq(i).addClass("noneContent")
                 }
             }
-            //禁止结束
             $(".subNav").click(function() {
-                $(this).toggleClass("currentDd").siblings(".subNav").removeClass("currentDd")
-                $(this).toggleClass("currentDt").siblings(".subNav").removeClass("currentDt")
-                $(this).next(".navContent").slideToggle(300).siblings(".navContent").slideUp(500)
+                if (!$(this).hasClass('noneContent')) {
+                    $(this).toggleClass("currentDd").siblings(".subNav").removeClass("currentDd")
+                    $(this).toggleClass("currentDt").siblings(".subNav").removeClass("currentDt")
+                    $(this).next(".navContent").slideToggle(300).siblings(".navContent").slideUp(500)
+                } else {
+                    $(this).toggleClass("currentDd").siblings(".subNav").removeClass("currentDd")
+                    fid = $(this).attr('data-fid')
+                        //此处数据改变发送ajax
+                    console.log(fid)
+                }
             })
             $(".navContent").on("click", "li", function() {
                 $(this).toggleClass("currentDd").siblings().removeClass("currentDd")
                 $(this).parent().siblings().children().removeClass("currentDd")
+                    //当用户在此处点击时，发送ajax请求
+                fid = $(this).parent().prev().attr('data-fid')
+                sid = $(this).children('a').attr('data-sid')
+                console.log(fid, sid)
             })
         })
     </script>
