--- a/src/mylibray.html
+++ b/src/mylibray.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="header visible-lg"></div>
+    <div class="header "></div>
     <div class="main w">
         <div class="main-tab">
             <p><a href="Index.html"> 首页 </a> / 我的图书馆</p>
